# pygpmf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  HERO11_SUPPORT.md  MANIFEST.in  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  README_RU.md  READTHEDOCS_SETUP.md  RELEASE_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TASK5_COMPLETION_REPORT.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: INTEGRATION_GUIDE.md  MASTER_RELEASE_GUIDE.md  QUICK_REFERENCE.md  README.md  REPOSITORY_UPDATE_SUMMARY.md  conf.py  examples.rst  installation.rst
docs/archive/: EXECUTIVE_SUMMARY.md  WEEK_1_2_PROGRESS.md
docs/development/: MIGRATION_NOTES.md
docs/github-actions/: GITHUB_ACTIONS_SETUP.md  READTHEDOCS_SETUP.md
docs/release/: PYPI_UPLOAD.md  RELEASE_CHECKLIST.md  RELEASE_IMPLEMENTATION_SUMMARY.md  RELEASE_NOTES_0_3_0.md
examples/: 01_basic_gps_extraction.py  02_export_to_gpx.py  03_visualize_gps_track.py  README.md  example_gps9_extract.py  example_gps_extract.py  example_gps_plot.py  example_gps_stats.py  example_gyro_extract.py  example_raw_parse.py
gpmf/: __init__.py  __main__.py  gps.py  gps_plot.py  gyro.py
journals/: 2026_01_12.md
tests/: __init__.py  conftest.py  test_advanced_plotting.py  test_cli.py  test_coverage_boost.py  test_final_coverage.py  test_gps.py  test_gyro.py  test_hero11_support.py  test_installation.py  test_io.py  test_parse.py
