[metadata]
name = pygpmf_oz
version = 0.2.0
author = Alexis Mignon
author_email = alexis.mignon@gmail.com
maintainer = ozand
description = A module to read GPMF data embedded in GoPro video files. Modernized fork with Python 3.9+ and Windows support.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ozand/pygpmf_oz
project_urls =
    Bug Tracker = https://github.com/ozand/pygpmf_oz/issues
    Source = https://github.com/ozand/pygpmf_oz
    Documentation = https://github.com/ozand/pygpmf_oz#readme
license = MIT
license_files = LICENSE
keywords = gopro, gpmf, gps, video, metadata
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Multimedia :: Video

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    gpxpy>=1.5.0
    ffmpeg-python>=0.2.0
    geopandas>=0.12.0
    contextily>=1.3.0
    matplotlib>=3.5.0

[options.packages.find]
where = .
include = gpmf*

[options.entry_points]
console_scripts =
    gpmf = gpmf.__main__:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --tb=short
    --cov=gpmf
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    requires_video: marks tests that require video files
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

[coverage:run]
source = gpmf
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True
